Bug 314409 - Moving to Other Workspace Crashed KWin
Summary: Moving to Other Workspace Crashed KWin
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-window-management (other bugs)
Version First Reported In: 4.9.98 (RC3)
Platform: Ubuntu Linux
: NOR crash
Target Milestone: 4.10.1
Assignee: KWin default assignee
URL: http://git.reviewboard.kde.org/r/108775/
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-04 11:13 UTC by yo
Modified: 2013-02-19 01:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.1
Sentry Crash Report:
thomas.luebking: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description yo 2013-02-04 11:13:07 UTC
Application: kwin (4.9.98)
KDE Platform Version: 4.9.98
Qt Version: 4.8.4
Operating System: Linux 3.8.0-3-generic x86_64
Distribution: Ubuntu Raring Ringtail (development branch)

-- Information about the crash:
- What I was doing when the application crashed:

I was attempting to move to another workspace. By hitting the key combination for such a path, KWin crashed.

The crash can be reproduced some of the time.

-- Backtrace:
Application: KWin (kwin), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7ffdb81567c0 (LWP 4678))]

Thread 3 (Thread 0x7ffd9a906700 (LWP 4687)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007ffdb4263d87 in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#2  0x00007ffdb4263db9 in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#3  0x00007ffdabd89f8f in start_thread (arg=0x7ffd9a906700) at pthread_create.c:311
#4  0x00007ffdb7974ded in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 2 (Thread 0x7ffd99560700 (LWP 4688)):
#0  0x00007ffdb796d203 in select () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007ffdb2da84c3 in qt_safe_select (nfds=21, fdread=0x7ffd84000ac8, fdwrite=0x7ffd84000d60, fdexcept=0x7ffd84000ff8, orig_timeout=0x0) at kernel/qcore_unix.cpp:83
#2  0x00007ffdb2dacf59 in QEventDispatcherUNIXPrivate::doSelect (this=this@entry=0x7ffd84000910, flags=..., timeout=0x0) at kernel/qeventdispatcher_unix.cpp:223
#3  0x00007ffdb2dada22 in QEventDispatcherUNIX::processEvents (this=0x7ffd840008f0, flags=...) at kernel/qeventdispatcher_unix.cpp:937
#4  0x00007ffdb2d7b3ff in QEventLoop::processEvents (this=this@entry=0x7ffd9955fd90, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007ffdb2d7b688 in QEventLoop::exec (this=0x7ffd9955fd90, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007ffdb2c7cc00 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:542
#7  0x00007ffdb2d5bb2f in QInotifyFileSystemWatcherEngine::run (this=0x1dad4e0) at io/qfilesystemwatcher_inotify.cpp:256
#8  0x00007ffdb2c7fbdc in QThreadPrivate::start (arg=0x1dad4e0) at thread/qthread_unix.cpp:338
#9  0x00007ffdabd89f8f in start_thread (arg=0x7ffd99560700) at pthread_create.c:311
#10 0x00007ffdb7974ded in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 1 (Thread 0x7ffdb81567c0 (LWP 4678)):
[KCrash Handler]
#6  0x00007ffd89de525e in KWin::PresentWindowsEffect::calculateWindowTransformationsClosest (this=this@entry=0x2374a10, windowlist=..., screen=1, motionManager=...) at ../../../kwin/effects/presentwindows/presentwindows.cpp:1000
#7  0x00007ffd89de5e51 in KWin::PresentWindowsEffect::calculateWindowTransformations (this=0x2374a10, windowlist=..., screen=<optimized out>, motionManager=..., external=<optimized out>) at ../../../kwin/effects/presentwindows/presentwindows.cpp:966
#8  0x00007ffd89deb822 in KWin::PresentWindowsEffectProxy::calculateWindowTransformations (this=0x2374a20, windows=..., screen=<optimized out>, manager=...) at ../../../kwin/effects/presentwindows/presentwindows_proxy.cpp:39
#9  0x00007ffd89dfed6d in KWin::DesktopGridEffect::setup (this=this@entry=0x251b4c0) at ../../../kwin/effects/desktopgrid/desktopgrid.cpp:1109
#10 0x00007ffd89dff615 in setActive (active=true, this=0x251b4c0) at ../../../kwin/effects/desktopgrid/desktopgrid.cpp:1044
#11 KWin::DesktopGridEffect::setActive (this=0x251b4c0, active=<optimized out>) at ../../../kwin/effects/desktopgrid/desktopgrid.cpp:1033
#12 0x00007ffdb2d920af in QMetaObject::activate (sender=0x266b740, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff337a68d0) at kernel/qobject.cpp:3539
#13 0x00007ffdb211cb52 in QAction::triggered (this=this@entry=0x266b740, _t1=false) at .moc/release-shared/moc_qaction.cpp:277
#14 0x00007ffdb211cd40 in QAction::activate (this=0x266b740, event=<optimized out>) at kernel/qaction.cpp:1257
#15 0x00007ffdb74a09f1 in trigger (this=0x266b740) at /usr/include/qt4/QtGui/qaction.h:218
#16 KGlobalAccelPrivate::_k_invokeAction (this=0x1ef1080, componentUnique=..., actionUnique=..., timestamp=13659758) at ../../kdeui/shortcuts/kglobalaccel.cpp:449
#17 0x00007ffdb2d920af in QMetaObject::activate (sender=0x1ebf240, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff337a6ae0) at kernel/qobject.cpp:3539
#18 0x00007ffdb75a0329 in OrgKdeKglobalaccelComponentInterface::globalShortcutPressed (this=<optimized out>, _t1=..., _t2=..., _t3=13659758) at kglobalaccel_component_interface.moc:164
#19 0x00007ffdb75a0794 in qt_static_metacall (_a=<optimized out>, _id=<optimized out>, _o=<optimized out>, _c=<optimized out>) at kglobalaccel_component_interface.moc:75
#20 OrgKdeKglobalaccelComponentInterface::qt_static_metacall (_o=0x1ebf240, _c=<optimized out>, _id=<optimized out>, _a=0x7fff337a6e30) at kglobalaccel_component_interface.moc:69
#21 0x00007ffdb75a0dff in OrgKdeKglobalaccelComponentInterface::qt_metacall (this=0x1ebf240, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7fff337a6e30) at kglobalaccel_component_interface.moc:130
#22 0x00007ffdb30fe123 in QDBusConnectionPrivate::deliverCall (this=0x1d38f50, object=0x1ebf240, msg=..., metaTypes=..., slotIdx=5) at qdbusintegrator.cpp:951
#23 0x00007ffdb2d9158e in QObject::event (this=0x1ebf240, e=<optimized out>) at kernel/qobject.cpp:1194
#24 0x00007ffdb2122fbc in QApplicationPrivate::notify_helper (this=this@entry=0x1d3fd90, receiver=receiver@entry=0x1ebf240, e=e@entry=0x262e590) at kernel/qapplication.cpp:4567
#25 0x00007ffdb212742b in QApplication::notify (this=0x7fff337a7b30, receiver=0x1ebf240, e=0x262e590) at kernel/qapplication.cpp:4428
#26 0x00007ffdb745c7c6 in KApplication::notify (this=0x7fff337a7b30, receiver=0x1ebf240, event=0x262e590) at ../../kdeui/kernel/kapplication.cpp:311
#27 0x00007ffdb2d7c6ae in QCoreApplication::notifyInternal (this=0x7fff337a7b30, receiver=receiver@entry=0x1ebf240, event=event@entry=0x262e590) at kernel/qcoreapplication.cpp:946
#28 0x00007ffdb2d80531 in sendEvent (event=0x262e590, receiver=0x1ebf240) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#29 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x1cca1f0) at kernel/qcoreapplication.cpp:1570
#30 0x00007ffdb21c8a8c in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:236
#31 QEventDispatcherX11::processEvents (this=0x1ccbad0, flags=...) at kernel/qeventdispatcher_x11.cpp:75
#32 0x00007ffdb2d7b3ff in QEventLoop::processEvents (this=this@entry=0x7fff337a7840, flags=...) at kernel/qeventloop.cpp:149
#33 0x00007ffdb2d7b688 in QEventLoop::exec (this=0x7fff337a7840, flags=...) at kernel/qeventloop.cpp:204
#34 0x00007ffdb2d80848 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1218
#35 0x00007ffdb7caadca in kdemain (argc=3, argv=0x7fff337a7c78) at ../../kwin/main.cpp:537
#36 0x00007ffdb789cea5 in __libc_start_main (main=0x4006d0 <main(int, char**)>, argc=3, ubp_av=0x7fff337a7c78, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fff337a7c68) at libc-start.c:260
#37 0x0000000000400701 in _start ()

Reported using DrKonqi
Comment 1 Thomas Lübking 2013-02-05 18:32:42 UTC
Git commit e4ef2f072336a59039b1372266e4a5ab05d29cc0 by Thomas Lübking.
Committed on 04/02/2013 at 16:46.
Pushed by luebking into branch 'master'.

react on screenCountChanged to re-validate lists
REVIEW: 108775

M  +29   -13   kwin/effects/presentwindows/presentwindows.cpp
M  +1    -0    kwin/effects/presentwindows/presentwindows.h

http://commits.kde.org/kde-workspace/e4ef2f072336a59039b1372266e4a5ab05d29cc0
Comment 2 Thomas Lübking 2013-02-11 10:29:33 UTC
i actually considered to backport this for 4.10.1
Comment 3 Thomas Lübking 2013-02-12 21:29:37 UTC
Git commit 63bf41ed8e4e5731d50369c82286b76dd99a8989 by Thomas Lübking.
Committed on 04/02/2013 at 16:46.
Pushed by luebking into branch 'KDE/4.10'.

react on screenCountChanged to re-validate lists

includes fixing commit 1ac2f407c67c5740fb79cb11b610814a056b3268
REVIEW: 108775
FIXED-IN: 4.10.1
(cherry picked from commit e4ef2f072336a59039b1372266e4a5ab05d29cc0)

M  +28   -13   kwin/effects/presentwindows/presentwindows.cpp
M  +1    -0    kwin/effects/presentwindows/presentwindows.h

http://commits.kde.org/kde-workspace/63bf41ed8e4e5731d50369c82286b76dd99a8989