react on screenCountChanged to re-validate lists

BUG: 314409
REVIEW: 108775